[package]
name = "vo-rusqlite"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Vo wrapper for rusqlite"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["dep:linkme", "dep:vo-ext", "dep:vo-ffi-macro", "dep:vo-runtime", "vo-ext/native", "vo-runtime/std"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
vo-ext = { git = "https://github.com/vo-lang/volang", default-features = false, optional = true }
vo-ffi-macro = { git = "https://github.com/vo-lang/volang", optional = true }
vo-runtime = { git = "https://github.com/vo-lang/volang", default-features = false, optional = true }
linkme = { version = "0.3", optional = true }

[workspace]
